fix alignment in footer

--- a/css/global.css
+++ b/css/global.css
@@ -53,11 +53,15 @@ footer {
   padding: 5rem;
 }
 .contact-info {
+  height: 10rem;
   text-align: left;
   font-weight: 700;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+.contact-info p {
+  margin-top: 0;
 }
 
 .flex-footer {
@@ -70,6 +74,9 @@ footer {
 .footer-logo img {
   width: 5.5rem;
   height: auto;
+}
+.footer-logo {
+  height: 10rem;
 }
 .footer-logo p {
   max-width: 6rem;
